Use 12-hour clock instead of 24-hour clock.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,7 +67,8 @@ set-option -g status-right-length 90
 #set-option -g status-left "#(~/self/unix/mac/tmux-powerline/powerline.sh left)"
 #set-option -g status-right "#(~/self/unix/mac/tmux-powerline/powerline.sh right)"
 set-option -g visual-activity on
-set -g status-right '%a %m-%d %H:%M'
+#set -g status-right '%a %Y-%m-%d %H:%M'
+set -g status-right '%a %y-%m-%d %l:%M %p'
 
 # Set C-t to create a new window.
 #bind-key C-g previous-window
