--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,9 +13,10 @@
 set-option -g prefix C-b
 
 set -g default-terminal "screen-256color"
-set-option -g default-command "reattach-to-user-namespace -l fish"
 
-bind y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+# Mac specific options...
+#set-option -g default-command "reattach-to-user-namespace -l fish"
+#bind y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
 
 # Ignore a number of EOF sequences.
 set-environment -g 'IGNOREEOF' 2
