--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,8 @@ set-option -g prefix C-b
 set -g default-terminal "screen-256color"
 
 # Mac specific options...
-#set-option -g default-command "reattach-to-user-namespace -l fish"
-#bind y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+set-option -g default-command "reattach-to-user-namespace -l fish"
+bind y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
 
 # Ignore a number of EOF sequences.
 set-environment -g 'IGNOREEOF' 2
