Swap vertical / horizontal splits.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,8 +94,8 @@ set -sg escape-time 0
 #setw -g aggressive-resize on
 
 # Splitting windows
-bind -n C-_ split-window -v
-bind -n C-s split-window -h
+bind -n C-s split-window -v
+bind -n C-_ split-window -h
 
 bind -n C-Space copy-mode
 
