Ensure c key no longer closes windows.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,8 @@
 # TMUX configuration
 #-------------------------------------------------------------------------------
 
-# Set prefix key to q (un-like screen)
+# Key bindings you don't want to use as the tmux prefix key:
 # C-a is used by vim to increment a number (or date).
-# Unfortunately, C-a is a good key to use
 # C-w gets confused with vim's window command.
 # C-h is pane left
 # C-s is split horizontal
@@ -81,7 +80,6 @@ bind-key c next-window
 
 # Set C-t C-t to alternate between terminal windows.
 bind-key C-x kill-pane
-bind-key c kill-pane
 bind-key m new-window
 bind-key M new-window
 bind-key C-a new-window
