--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,6 +111,11 @@ bind -n C-h run-shell 'tmux-vim-select-pane -L'
 bind -n C-l run-shell 'tmux-vim-select-pane -R'
 bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 
+# You can send keys down to a second level tmux using the following:
+# bind-key C-c  send-keys C-b c
+# Here, I expose C-* keys for the sake of emacs.
+bind-key C-h  send-keys C-h c
+
 bind h select-pane -L
 #bind C-h select-pane -L
 bind j select-pane -D
