Remove now unused taskwarrior aliases.

--- a/.taskrc
+++ b/.taskrc
@@ -28,6 +28,6 @@ data.location=~/.task
 color=on
 journal.time=on
 dateformat.annotation=Y/m/d H:N
-default.command=list pro.not:cal
-alias.n=next pro.not:cal
-alias.cn=list pro:cal due.before:2d
+#default.command=list pro.not:cal
+#alias.n=next pro.not:cal
+#alias.cn=list pro:cal due.before:2d
