--- a/.tmux.conf
+++ b/.tmux.conf
@@ -146,25 +146,42 @@ bind + new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom.0 \; select-window -
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
-# COLORS.
+#### COLOUR (Solarized light)
 # For reference, the xterm color cube points are: 00, 5F, 87, AF, D7, FF
-# Status bar has a dim gray background
-set-option -g status-bg colour234
-set-option -g status-fg colour0
-# Left shows the session name, in blue
-set-option -g status-left-bg default
-set-option -g status-left-fg colour74
-# Right is some CPU stats, so terminal green
-set-option -g status-right-bg default
-set-option -g status-right-fg colour71
-# Windows are medium gray; current window is white
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-current-fg '#ffffff'
-set-window-option -g window-status-current-bg '#000000'
-# Beeped windows get a blinding orange background
-set-window-option -g window-status-bell-fg '#000000'
-set-window-option -g window-status-bell-bg '#d78700'
+
+# default statusbar colors
+set-option -g status-bg colour231 #base2
+set-option -g status-fg colour130 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour180 #base00
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour196 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour231 #base2
+set-option -g pane-active-border-fg colour051 #base1
+
+# message text
+set-option -g message-bg colour231 #base2
+set-option -g message-fg colour196 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour20 #blue
+set-option -g display-panes-colour colour196 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour40 #green
+
+
 set-window-option -g window-status-bell-attr none
+
 # Trim window titles to a reasonable length
 set-window-option -g window-status-format '#[fg=yellow]#F#I#[default] #32W '
 set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32W '
