Remove ag command as unite's rec async core.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,11 +43,6 @@ bind-key 'p' run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 bind-key 'c' send-keys x \; run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"\; display-message "copied"
 bind-key 'C-c' send-keys x \; run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"\; display-message "copied"
 
-
-# Make the active pane more visible
-set-option -g pane-active-border-fg colour47
-#set-option -g pane-active-border-bg black
-
 # Monitor activity
 #setw -g monitor-activity on
 
@@ -137,7 +132,7 @@ bind C-n attach-session -t "Work"
 bind n attach-session -t "Work"
 
 #-------------------------------------------------------------------------------
-# Full screen scirpt. Plus and minus.
+# Full screen script. Plus and minus.
 #-------------------------------------------------------------------------------
 # Bind + and - to maximize a window and then to subseqeuntly put it back
 # into place. This is an excellent little script.
