--- a/.tmux.conf
+++ b/.tmux.conf
@@ -141,43 +141,34 @@ bind + new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom.0 \; select-window -
 unbind -
 bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 
-#### COLOUR (Solarized light)
-# For reference, the xterm color cube points are: 00, 5F, 87, AF, D7, FF
+#### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-bg colour231 #base2
+set-option -g status-bg colour235 #base02
 set-option -g status-fg colour130 #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour180 #base00
+set-window-option -g window-status-fg colour100 #base0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour196 #orange
+set-window-option -g window-status-current-fg colour33 #orange
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour231 #base2
-set-option -g pane-active-border-fg colour051 #base1
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour46 #base01
 
 # message text
-set-option -g message-bg colour231 #base2
+set-option -g message-bg colour235 #base02
 set-option -g message-fg colour196 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour20 #blue
-set-option -g display-panes-colour colour196 #orange
+set-option -g display-panes-colour colour215 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour40 #green
-
-
-set-window-option -g window-status-bell-attr none
-
-# Trim window titles to a reasonable length
-set-window-option -g window-status-format '#[fg=yellow]#F#I#[default] #32W '
-set-window-option -g window-status-current-format '#[fg=yellow] #I#[default] #32W '
-
