--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,17 +149,17 @@ set-option -g status-fg colour130 #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg colour100 #base0
+set-window-option -g window-status-fg colour33 #blue
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour33 #orange
+set-window-option -g window-status-current-fg colour100 #green
 set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
+set-option -g pane-border-fg colour100 #base02
 set-option -g pane-active-border-fg colour46 #base01
 
 # message text
