TMUX osx specific configuration.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,9 +13,7 @@ set-option -g prefix C-b
 
 set -g default-terminal "screen-256color"
 
-# Mac specific options...
-set-option -g default-command "reattach-to-user-namespace -l fish"
-bind y run-shell "reattach-to-user-namespace -l bash -c 'tmux show-buffer | pbcopy'"
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
 
 # Ignore a number of EOF sequences.
 set-environment -g 'IGNOREEOF' 2
