Add bashrc file.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,6 +88,9 @@ set -sg escape-time 0
 bind -n C-s split-window -v
 bind -n C-_ split-window -h
 
+bind-key s split-window -v
+bind-key v split-window -h
+
 bind -n C-Space copy-mode
 
 #-------------------------------------------------------------------------------
