Remove nerd tree, ensure tmux copy-mode entry.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,6 +92,8 @@ bind-key s split-window -v
 bind-key v split-window -h
 
 bind -n C-Space copy-mode
+bind -n C-Escape copy-mode
+bind Escape copy-mode
 
 #-------------------------------------------------------------------------------
 # move between panes using vi keys 'hjkl'
